Fix align issues in footer and landing page

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -24,4 +24,11 @@ footer {
   .info {
     text-align: center !important;
   }
+
+  .footercolumn {
+    align-items: center;
+    a {
+      margin: 10px 0px !important;
+    }
+  }
 }
